kubernetes/tinyauth/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tinyauth
  namespace: tinyauth
spec:
  selector:
    app: tinyauth
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
