kubernetes/tinyauth/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tinyauth
  namespace: tinyauth
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`tinyauth.tehmatt.com`)
    kind: Rule
    services:
    - name: tinyauth
      port: 3000
  tls: {}
